--- a/sections/customeheader.liquid
+++ b/sections/customeheader.liquid
@@ -1,10 +1,11 @@
 {% include 'customeoffsetmenu' %}
 
 
-
+<div id="haddeopdonw">
+</div>
 <header>
-    <div class="header-top-wrapper d-flex align-items-center">
-        <div id="splide" class="splide">
+    <div class="header-top-wrapper d-flex align-items-center site-nav-hade__child">
+        <div id="splide-{{section.id}}" class="splide">
             <div class="splide__track">
               <ul class="splide__list">
                 {% for item in section.blocks %}
@@ -202,9 +203,9 @@
 
   <script>
 
-    document.addEventListener( 'DOMContentLoaded', function () {
+    
       // top bannar insitalization 
-      new Splide( '#splide' , {
+      new Splide( '#splide-{{section.id}}' , {
         type: 'loop',
         pagination : false,
         arrows     : false,
@@ -237,7 +238,7 @@
         
       }).mount( window.splide.Extensions );
     
-      });
+
 
   </script>
 
