--- a/sections/customeheader.liquid
+++ b/sections/customeheader.liquid
@@ -35,12 +35,51 @@
             </div>
             <div class="search-from d-none d-lg-block">
               <div class="sidebar-box search-form-wrap">
-                <form action="#" class="search-form">
+
+                {% comment %} defaulit search  
+                <form class="search-form" action="{{ routes.search_url }}">
                   <div class="form-group">
-                    <span class="icon "> {% include 'svgsearch' %} </span>
-                    <input type="text" class="form-control" id="s" placeholder="What can we help you find?">
+
+
+
+                    <span class="icon"> {% include 'svgsearch' %} </span>
+                    <input type="text" class="form-control" value="{{ search.terms | escape }}"  placeholder="What can we help you find?">
+                    
                   </div>
                 </form>
+                  defaulit search end  {% endcomment %}
+
+
+
+                {% comment %} theme serarch  {% endcomment %}
+                <form class="search-form search-bar__form" action="{{ routes.search_url }}" method="get" role="search">
+                  <div class="search-form__input-wrapper">
+                    <input
+                      type="text"
+                      name="q"
+                      placeholder="{{ 'general.search.placeholder' | t }}"
+                      role="combobox"
+                      aria-autocomplete="list"
+                      aria-owns="predictive-search-results"
+                      aria-expanded="false"
+                      aria-label="{{ 'general.search.placeholder' | t }}"
+                      aria-haspopup="listbox"
+                      class="search-form__input search-bar__input"
+                      data-predictive-search-drawer-input
+                      data-base-url="{{ routes.search_url }}"
+                      onkeyup="suggestinlist(this)"
+                    />
+                    <input type="hidden" name="options[prefix]" name="type" value="last" aria-hidden="true" value="product" />
+                  </div>
+          
+                  <button class="search-bar__submit search-form__submit"
+                    type="submit"
+                    data-search-form-submit>
+                    {% render 'icon-search' %}
+                    <span class="icon__fallback-text">{{ 'general.search.submit' | t }}</span>
+                  </button>
+                </form>
+                {% comment %} theme serarch End {% endcomment %}
               </div>
             </div>
           </div>
@@ -155,6 +194,37 @@
               </div>
             </div>
         </div>
+          <div class="row">
+           <div class="col-12">
+           <div class="search-wrapper">
+            <div id="suggeationlist" class="d-flex justify-content-between align-items-top">
+                <div class="text-center searchplaceholder">
+                  <h2>Add you Search teram</h2> 
+                </div>
+            </div>
+          
+          </div>
+          </div>
+          </div>
+          {% comment %} proudct suggation  {% endcomment %}
+
+  
+          
+          {% comment %} proudct suggation end {% endcomment %}
+    
+
+
+        {% comment %} collection  
+        <div class="collection-wrapper">
+          <h3>Collection</h3>
+          <div class="singel-porduct">
+          <a href=""> <img src="" alt=""></a>
+          <h4>Product title</h4>
+          </div>
+
+        </div> 
+        {% endcomment %}
+        {% comment %} collection end {% endcomment %}
       </div>
     </div>
   </header>
@@ -239,7 +309,130 @@
       }).mount( window.splide.Extensions );
     
 
+      async function suggestinlist(e){
+        const thisVal = e.value
+       
+        const suggestionList = document.getElementById("suggeationlist")
+       
+      
+        const reqcollection = await fetch(`/search/suggest.json?q=${ thisVal }&resources[type]=collection&limit=4`)
+        const collectionitems  = await reqcollection.json()
+      
+       const collectionlist = collectionitems.resources.results.collections;
 
+       const collectionwerapper = document.createElement('div')
+       const collectiontTitle = document.createElement('h3')
+       collectiontTitle.innerHTML ="Collection"
+       collectionwerapper.className = "proudct-werapper"
+       suggestionList.innerHTML = ''
+       collectionlist.forEach((item) => {
+       
+        const singelcollection = document.createElement('div')
+        singelcollection.className = "singel-porducta"
+        {% comment %} img  {% endcomment %}
+        const singelcollectionimg = document.createElement('img')
+        singelcollectionimg.src= item.featured_image.url
+      
+        {% comment %} imglink {% endcomment %}
+        const singelcollectionimglink = document.createElement('a')
+        singelcollectionimglink.href= item.url
+        singelcollectionimglink.append(singelcollectionimg);
+
+        {% comment %} proudct title  {% endcomment %}
+        const singelcollectiontTitle = document.createElement('h4');
+        singelcollectiontTitle.innerText = item.title
+        {% comment %} proudct title link {% endcomment %}
+        const singelcollectiontTitlelink = document.createElement('a')
+        singelcollectiontTitlelink.href= item.url
+        singelcollectiontTitlelink.append(singelcollectiontTitle);
+        singelcollection.append(singelcollectionimglink,singelcollectiontTitlelink);
+        collectionwerapper.append(collectiontTitle, singelcollection )
+    
+      })
+      
+    const req = await fetch(`/search/suggest.json?q=${ thisVal }&resources[type]=product`)
+    const items  = await req.json()
+  
+   const proudctlist = items.resources.results.products;
+   console.log(proudctlist)
+   const proudctwerapper = document.createElement('div')
+   const proudctTitle = document.createElement('h3')
+   proudctTitle.innerHTML ="Proudcts"
+   proudctwerapper.className = "proudct-werapper"
+   suggestionList.innerHTML = ''
+   proudctwerapper.append( proudctTitle )
+   proudctlist.forEach((item) => {
+   
+    const singelproudct = document.createElement('div')
+    singelproudct.className = "singel-porduct"
+    {% comment %} img  {% endcomment %}
+    const singelproudctimg = document.createElement('img')
+    singelproudctimg.src= item.image
+  
+    {% comment %} imglink {% endcomment %}
+    const singelproudctimglink = document.createElement('a')
+    singelproudctimglink.href= item.url
+    singelproudctimglink.append(singelproudctimg);
+
+    {% comment %} proudct title  {% endcomment %}
+    const singelproudcttitle = document.createElement('h4');
+    singelproudcttitle.innerText = item.title
+    {% comment %} proudct title link {% endcomment %}
+    const singelproudcttitlelink = document.createElement('a')
+    singelproudcttitlelink.href= item.url
+    singelproudcttitlelink.append(singelproudcttitle);
+
+
+    
+    
+
+      singelproudct.append(singelproudctimglink,singelproudcttitlelink);
+      proudctwerapper.append( singelproudct )
+
+  }) 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      if(collectionlist.length > 0 && proudctlist.length > 0) {
+      suggestionList.append( proudctwerapper, collectionwerapper);
+
+        
+      } else if(collectionlist.length > 0){
+        suggestionList.append( collectionwerapper)
+      }
+       else if(proudctlist.length > 0){
+        suggestionList.append(proudctwerapper)
+      }
+
+    }
+
+  $(document).ready(function() {
+    $('.search-form__input-wrapper').click(function() {
+        $(this).addClass('active');
+        $(".search-wrapper").addClass("active");
+    });
+});
   </script>
 
 
@@ -254,164 +447,5 @@
 </style>
 
 
-{% comment %} Header copy  {% endcomment %}
 
-
-
-{% comment %} 
-<header>
-  <div class="header-top-wrapper d-flex align-items-center">
-      <div id="splide" class="splide">
-          <div class="splide__track">
-            <ul class="splide__list">
-              {% for item in section.blocks %}
-              <li class="splide__slide d-flex align-items-center">
-                 <div class="top-bar-svg d-inline-block">
-                      {% include 'svganounce-bar-start' %}
-                 </div>
-                 <p> 
-                  {{item.settings.text}}
-                </p> 
-             </li>
-          {% endfor %}
-              
-            </ul>
-          </div>
-        </div>
-        
-  </div>
-  <div class="main-header-wrapper d-flex align-items-center ">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-8 col-xl-6   col-lg-5   d-flex align-items-center">
-
-          <div class="logo ">
-            <a href="/"><img src="{{section.settings.img | img_url:''}}" alt=""></a>
-          </div>
-          <div class="search-from d-none d-lg-block">
-            <div class="sidebar-box search-form-wrap">
-              <form action="#" class="search-form">
-                <div class="form-group">
-                  <span class="icon "> {% include 'svgsearch' %} </span>
-                  <input type="text" class="form-control" id="s" placeholder="What can we help you find?">
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-        
-         <!-- small screan menu  -->
-         <div class="col-4   d-flex align-items-center justify-content-end d-lg-none">
-            <div class="menu-tooglewrapper  d-lg-none">
-                <div class="toogle-svg-icon" id="sidebarCollapse">
-                    {% include 'svgmenu-bar' %}
-                </div>
-            </div>
-         </div>
-         <!-- small screan menu  end -->
-         <!-- big-screan - left side bar  -->
-        <div class="col-xl-6   col-lg-7  d-flex justify-content-end align-items-center ">
-          <div class="header-main-right-wrapper d-none d-lg-flex align-items-center ">
-              <div class="main-menu d-inline-block">
-                <ul>
-                  {% assign footer_menu_4 = section.settings.sub4 %}
-                  {% for link in linklists[footer_menu_4].links %}
-
-              {% assign child_list_handle = link.title | handleize %}
-                  
-                  {% if linklists[child_list_handle].links != blank %}
-                      <li class="witharrow"><a href="{{link.url}}" class="d-flex align-items-center"><p class="d-inline-block">{{ link.title }}</p> <div class="menu-arrow d-inline-block">
-                          {% include 'svgarrow_down' %}
-                          </div></a>
-                      <!-- End submeu start  -->
-
-
-                      <div class="submenu" id="rec">
-                          <div class="container">
-                          <div class="row">
-                            {% for childlink in linklists[child_list_handle].links %}
-                              {% assign grand_child_link_handle = childlink.title | handleize %}
-                              <div class="col-md-3">
-
-                                  <div class="singel-menu">
-                                    
-                                  <ul>
-                                    
-                  
-                                      <li><a href="{{ childlink.url }}">{{ childlink.title }}</a></li>
-                                      {% for grand_child_link in linklists[grand_child_link_handle].links %}
-                                      <li><a href="{{ grand_child_link.url }}">{{ grand_child_link.title }}</a></li>
-                                      {% endfor %}
-                                  
-                                  </ul>
-                               
-                                  </div>
-
-                              </div>
-                            {% endfor %}
-                          </div>
-                          </div>
-                          
-                          
-                      </div>
-                      <!-- End submeu  -->
-                    
-                 
-
-
-                  {% else %}
-                  <li><a href="{{link.url}}">{{ link.title }}</a></li>
-                  {% endif %}
-                 
-           
-
-                  
-                      
-                          
-
-
-
-                </li>
-              {%- endfor -%}
-                 
-                </ul>
-              </div>
-
-              <div class="user-cart-navigation d-inline-block">
-                  <ul>
-                      {% comment %} loging liquid  {% endcomment %}
-                              {% if shop.customer_accounts_enabled %}
-                          {% if customer %}
-                          
-
-                          <li><a href="{{ routes.account_url }}">{% include 'svguser' %}</a></li>
-                          {% else %}
-                          <li><a href="{{ routes.account_login_url }}">{% include 'svguser' %}</a></li>
-                          {% endif %}
-                      {% endif %}
-
-
-                    <li><a href="{{ routes.cart_url }}"> {% include 'svgcart' %} </a></li>
-                  </ul>
-              </div>
-          </div>
-        </div>
-         <!-- big-screan - right side bar  -->
-          <div class="col-12">
-            <div class="search-from d-lg-none">
-              <div class="sidebar-box search-form-wrap">
-                <form action="#" class="search-form">
-                  <div class="form-group">
-                    <span class="icon "> {% include 'svgsearch' %} </span>
-                    <input type="text" class="form-control" id="s" placeholder="What can we help you find?">
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-      </div>
-    </div>
-  </div>
-</header> {% endcomment %}
 
